add webpack fix bugs and refactor for SPA version

--- a/index.html
+++ b/index.html
@@ -4,38 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/css/common.css" />
-    <link rel="stylesheet" href="src/css/style.css" />
-    <title>Quiz</title>
+    <link rel="stylesheet" href="styles/common.css" />
+    <link rel="stylesheet" id="styles" href="styles/style.css" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="http://127.0.0.1/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="http://127.0.0.1/favicon.ico"
+      type="image/x-icon"
+    />
+    <title id="title">Quiz</title>
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="logo">
-          <img src="src/images/Logo.svg" alt="logo" />
+          <img src="images/Logo.svg" alt="logo" />
         </div>
       </div>
     </header>
-    <section class="main">
-      <div class="container">
-        <div class="main-content">
-          <h1 class="big-title">
-            Проверь свои знания JavaScript вместе с <span>АйтилогияQuiz</span>!
-          </h1>
-          <div class="main-description">
-            Мы поможем подготовиться к контрольному заданию или тесту по
-            JavaScript!
-          </div>
-          <div class="main-btn">
-            <a href="form.html" class="button">Начать тест</a>
-          </div>
-        </div>
-        <div class="main-image">
-          <img src="src/images/Main-image.svg" alt="main-img" />
-        </div>
-      </div>
-    </section>
-
+    <div id="content"></div>
     <footer class="footer">«АйтилогияQuiz» © Все права защищены / 2022</footer>
   </body>
 </html>
